--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,44 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  margin: 30px;
 }
 
 .card {
-  width: 400px;
+  width: 600px;
   background: #fff;
   margin: 16px auto;
+  padding:2px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 20px 15px;
+  font-weight: strong;
+  margin: 15px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 40px 10px;
+  margin: 15px;
+  text-align: left;
+  font-size: 22px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 10px;
+  margin: 15px;
+  text-align: center;
+  font-size: 22px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 10px;
+  font-size: 22px;
+  display: block;
+  margin-left:190px;
 }
